...
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.049" />

        <ListView
            android:id="@+id/historyListView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:divider="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sentio_logo"
            app:layout_constraintVertical_bias="0.5" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="#F8B64C"
            android:src="@drawable/ic_baseline_filter_list_24"
            app:layout_constraintBottom_toBottomOf="parent"
...
