<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Emotional State:"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detail_emotion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date and Time:"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detail_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reason:"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detail_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Social Situation:"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detail_social_situation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Image:"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/image_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <ImageView
        android:id="@+id/mood_event_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:srcCompat="@tools:sample/avatars" />

</LinearLayout>