<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121318">

    <View
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="top"
        android:background="#121318"
        android:elevation="8dp" />

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="top|start"
        android:layout_margin="5dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Close"
        android:padding="10dp"
        android:src="@drawable/ic_close"
        android:elevation="10dp" />

    <!-- RecyclerView that will scroll the header and comments together -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_comment_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/settingsButton"
        android:src="@drawable/ic_event_comment"
        android:tint="@color/black"
        app:fabSize="normal" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>